--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    implementation 'org.springframework.boot:spring-boot-starter-web'      // 기존 MVC
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'  // WebClient 사용
+
 }
 
 tasks.named('test') {
