✨ feat: LH 공고 크롤러 전면 구현 및 안정화
- 목록/상세 2단계 크롤링 파이프라인 구축: 목록에서 메타 추출 → 상세 페이지 확장 수집
- 페이징 신뢰성 강화: pagingForm 우선 + srchForm 백업, 1페이지 재응답 감지 및 중단/재시도
- 파라미터 정규화: uppAisTpCd/aisTpCd/panSs/기간 필드 일관 세팅 및 폴백
- 데이터 정규화/중복 방지: detailUrl 기준 product upsert, 공고(HousingAnnouncements) idempotent 업데이트
- 날짜/상태 파싱 견고화: 게시일/마감일/상태(공고중·접수중·정정공고중) 규칙화 및 지역/유형 매핑
- 첨부 수집 훅: 팝오버 AJAX 파일 리스트 엔드포인트 연계(파일 메타 파싱 준비)
- 재시도/백오프: 네트워크 흔들림과 1페이지 재응답 대비 지수 백오프
- 로깅/메트릭: 페이지 범위·행수·결과(success/skip/fail/insert/update) 요약 로그 표준화
- 결과: 2페이지 포함 전 건 정상 수집 및 DB 반영 확인

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -49,9 +49,12 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    // WebFlux 추가 (비동기 HTTP 요청용 WebClient)
     implementation 'org.springframework.boot:spring-boot-starter-web'      // 기존 MVC
     implementation 'org.springframework.boot:spring-boot-starter-webflux'  // WebClient 사용
 
+    // Jsoup (HTML 파싱, 웹 크롤링용)
+    implementation 'org.jsoup:jsoup:1.17.2'
 }
 
 tasks.named('test') {
