--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 
     // Jsoup (HTML 파싱, 웹 크롤링용)
     implementation 'org.jsoup:jsoup:1.17.2'
+
+    // SMTP 의존성 JavaMailSender Bean 등록
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
