--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -61,6 +61,9 @@ dependencies {
 
     // JSON 처리
     implementation 'org.json:json:20240303'
+
+    // 테스트 코드
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
